Thu Nov 15 10:57:32 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_query.cc: One test here does need a backend, and it seems
	  a more useful category, so drop the "don't need a backend" part from
	  the @brief documentation comment.

Thu Nov 15 09:29:47 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fix calculation of 0.0/0.0 in some cases.
	  This then got used as a minimum weight, but it seems this gives -nan
	  (at least on x86-64 Linux) so it may have been harmless in practice.

Thu Nov 15 05:39:47 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Eliminate workarounds for egcs 1.1.2 (certainly
	  we no longer support a compiler that old, but maybe some newer
	  compilers have the same issue, so I've rewritten the code to iterate
	  backwards over one MSet, which is a useful feature to have coverage
	  for).

Thu Nov 15 05:28:40 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Fix reversebool1 and reversebool2 to actually
	  use the result when they check an MSetIterator against end().

Thu Nov 15 01:55:15 GMT 2012  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: Add --quiet option to xapian-replicate, and
	  be a little more verbose by default.

Thu Nov 15 01:54:14 GMT 2012  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: xapian-replicate --force-copy now only
	  forces a single copy, and then attempts to replicate incrementally.

Thu Nov 15 00:51:50 GMT 2012  Olly Betts <olly@survex.com>

	* bin/xapian-replicate.cc: Tweak code layout.

Wed Nov 14 21:40:45 GMT 2012  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Allow files > 32G to be be copied by
	  replication.

Tue Nov 13 03:44:03 GMT 2012  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Pass 'true' or 'false' for 'bool' parameter,
	  not '0' or '1' (especially confusing as the two previous parameters
	  were integers which were often 0 or 1...)

Tue Nov 13 03:34:42 GMT 2012  Olly Betts <olly@survex.com>
